[gd_scene load_steps=18 format=3 uid="uid://c3johty28lw6u"]

[ext_resource type="Script" path="res://Scripts/chattingsoldier.gd" id="1_fvll6"]
[ext_resource type="Texture2D" uid="uid://dv0uy0nxcroll" path="res://Assets/pixel assets/Pixel Crawler - Royal Crew/rebellion/Idle-Sheet rebellion.png" id="2_cygu8"]
[ext_resource type="Texture2D" uid="uid://co22ln344ein6" path="res://Assets/pixel assets/Pixel Crawler - Royal Crew/rebellion/Run-Sheet.png" id="3_ap65h"]
[ext_resource type="Texture2D" uid="uid://crnws7b6mgnqc" path="res://Assets/png/e_dark.png" id="4_urg86"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sgend"]
atlas = ExtResource("2_cygu8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmm18"]
atlas = ExtResource("2_cygu8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_18pra"]
atlas = ExtResource("2_cygu8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnuxt"]
atlas = ExtResource("2_cygu8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqcoc"]
atlas = ExtResource("3_ap65h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_th0pn"]
atlas = ExtResource("3_ap65h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aynhy"]
atlas = ExtResource("3_ap65h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1r30"]
atlas = ExtResource("3_ap65h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ex2kn"]
atlas = ExtResource("3_ap65h")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc5y8"]
atlas = ExtResource("3_ap65h")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7qice"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgend")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmm18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18pra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnuxt")
}],
"loop": true,
"name": &"chatting_soldier_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqcoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th0pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aynhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1r30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex2kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc5y8")
}],
"loop": true,
"name": &"chatting_soldier_run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g551c"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_omc6n"]
radius = 31.0

[node name="chattingsoldier" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_fvll6")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(0.925, 0.925)
sprite_frames = SubResource("SpriteFrames_7qice")
animation = &"chatting_soldier_run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_g551c")

[node name="chat_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
position = Vector2(1, -12)
shape = SubResource("CircleShape2D_omc6n")

[node name="interact_popup2" type="Sprite2D" parent="."]
visible = false
z_index = 10
position = Vector2(1, -40)
scale = Vector2(0.236842, 0.231707)
texture = ExtResource("4_urg86")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
